manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-web-app-svc
spec:
  type: ClusterIP
  selector:
    app: python-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
