manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: python-app.local   # <- change this to something unique
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-web-app-svc
                port:
                  number: 80
